--- a/app/webpack/stylesheets/components.sass
+++ b/app/webpack/stylesheets/components.sass
@@ -76,6 +76,4 @@ pre
   justify-content: space-between
 
 .tab-pane pre
-  overflow: hidden
-  &:hover
-    overflow: overlay
+  +overflow-hidden
